fix: add wrap for tags

--- a/src/sub-blocks/CaseStudyCard/CaseStudyCard.scss
+++ b/src/sub-blocks/CaseStudyCard/CaseStudyCard.scss
@@ -44,6 +44,7 @@ $block: '.#{$ns}case-study-card';
     &__tags {
         @include reset-list-style;
         display: flex;
+        flex-wrap: wrap;
         gap: $indentXXXS;
     }
 
